# mdsol

./: Cargo.toml  README.md  Solitaire animation algorithm.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  windows-build.yml
designs/: klondike-solitaire-hld.md  solitaire-hld.md
installers/: Solitaire.iss
res/: app.manifest  app.rc  cards.json
src/: constants.rs  engine.rs  main.rs  solver.rs
tmp/: find_flush.py  insert_card_ptr.py  insert_ensure_layer.py  insert_flush.py  insert_helpers.py  line_numbers.py  mddsklbl-release.yml  print_classic_block.py  print_classic_branch.py  print_closures.py  print_emit.py  print_flush.py  print_flush_repr.py  print_impl.py  print_integrate.py  print_new_call.py  print_paint_classic.py  print_repr.py  print_snippet.py  render_body.txt  render_rest.txt  rewrite_emit.py  rewrite_integrate.py  update_backbuffer.py  update_classic_branch_header.py  update_classic_impl.py  update_classic_new_call.py  update_classic_struct.py  update_draw_closures.py  update_draw_face_fn.py  update_emit_push.py  update_flush_call.py  update_flush_pending.py  update_integrate_push.py  update_paint_block.py  update_paint_classic.py
tmp/mddsklbl/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
tmp/mddsklbl/.claude/: settings.local.json
tmp/mddsklbl/.github/workflows/: ci.yml
tmp/mddsklbl/designs/: 2025.09.13 - HLD.md
tmp/mddsklbl/installers/: DesktopLabeler.iss
tmp/mddsklbl/src/: autorun.rs  config.rs  core.rs  hotkeys.rs  lib.rs  main.rs  overlay.rs  tray.rs  ui.rs  vd.rs  windows_main.rs
tmp/mddsklbl/tests/: config_roundtrip.rs  hotkey_duplicates.rs  hotkeys.rs  visibility.rs
xtask/: Cargo.toml
xtask/src/: main.rs
