[package]
name = "solitaire"
version = "1.0.5"
edition = "2021"
description = "Native Win32 Solitaire in Rust (windows-rs)"
license = "MIT"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
build = "build.rs"

[workspace]
members = [
    "xtask",
]

[dependencies]
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",     # WIC
  "Win32_System_Com",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_System_Registry",
  "Win32_Security_Cryptography",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]}
anyhow = "1"
once_cell = "1"

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
strip = true

[[bin]]
name = "mdsol"
path = "src/main.rs"
