[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
usvg = "0.42"
resvg = "0.42"
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tempfile = "3"
