[package]
name = "mddskmgr"
version = "1.0.9"
edition = "2024"

[[bin]]
name = "mddsklbl"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_UI_HiDpi",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Foundation_Numerics",
  "Win32_System_RemoteDesktop",
  "Win32_UI_Accessibility",
  "Win32_System_Power",
  "Win32_UI_Input_KeyboardAndMouse"
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"
thiserror = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
notify = { version = "6", default-features = false, features = ["crossbeam-channel"] }

[target.'cfg(windows)'.dependencies]
winvd = "0.0.48"

[build-dependencies]
embed-manifest = "1"
winres = "0.1"
ico = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

